html and js template mostly working